--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -63,6 +63,10 @@ components:
           example: true
     Bot:
       type: object
+      required:
+        - id
+        - authorID
+        - timestamp
       properties:
         id:
           type: integer
