--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -12,6 +12,7 @@ paths:
         - users
       summary: Get user info by ID
       operationId: getUser
+      security: []
       parameters:
         - name: userID
           in: path
@@ -32,7 +33,8 @@ paths:
       tags:
         - users
       summary: Creates new user
-      operationId: createUser
+      operationId: signUpUser
+      security: []
       requestBody: 
         required: true
         content:
@@ -50,8 +52,43 @@ paths:
                   errors:
                     type: object
                     additionalProperties:
-                      $ref: '#/components/schemas/Error'                 
+                      $ref: '#/components/schemas/Error'     
+  /signin:
+    post:
+      tags:
+        - users
+      summary: Signs in and returns the authentication cookie
+      operationId: signInUser
+      security: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignInUser'
+      responses:
+        '200':
+          description: Returns empty struct if user signed in or errors
+          headers: 
+            Set-Cookie:
+              schema: 
+                type: string
+                example: JSESSIONID=abcde12345; Path=/; HttpOnly
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: object
+                    additionalProperties:
+                      $ref: '#/components/schemas/Error'
 components:
+  securitySchemes:
+    cookieAuth:
+      type: apiKey
+      in: cookie
+      name: JSESSIONID
   schemas:
     Error:
       type: object
