[UPD] code 400 to user put

--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -129,6 +129,8 @@ paths:
       responses:
         '200':
           description: Returns empty struct if user updated or errors
+        '400':
+          description: Failed to falidate
           content:
             application/json:
               schema:
