[UPD] /user to /users rename

--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -75,7 +75,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/InternalServer'
-  /user:
+  /users:
     post:
       tags:
         - users
