--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -168,7 +168,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/InternalServer'
-  /users/{userID}:
+  /users/{user_id}:
     get:
       tags:
         - users
@@ -191,7 +191,7 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServer'
       parameters:
-        - name: userID
+        - name: user_id
           in: path
           description: id of user that needs to be get
           required: true
