[UPD] /session/ to /session

--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -8,7 +8,7 @@ info:
     name: HotCodeGroup
     url: https://github.com/HotCodeGroup
 paths:
-  /session/:
+  /session:
     get:
       tags:
         - auth
