[UPD] Validate error schema

--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -275,7 +275,8 @@ components:
     ValidateError:
       type: object
       additionalProperties:
-        $ref: '#/components/schemas/Error'
+        type: string
+        example: taken
     BasicUser:
       type: object
       properties:
