[UPD] session => sessions

--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -8,7 +8,7 @@ info:
     name: HotCodeGroup
     url: https://github.com/HotCodeGroup
 paths:
-  /session:
+  /sessions:
     get:
       tags:
         - auth
