--- a/main_oas3.yaml
+++ b/main_oas3.yaml
@@ -271,6 +271,12 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/InternalServer'
+        '503':
+          description: all upload servers are unavailable
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error' 
 components:
   securitySchemes:
     cookieAuth:
